一時的に利用する画像ファイルを管理しないように設定

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
+# Ignore tmp image file
+spotter/Assets.xcassets/tmp
