ドメインをlocalhostからpiyorin.xyzに変更させた。

--- a/spotter/Info.plist
+++ b/spotter/Info.plist
@@ -24,8 +24,8 @@
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
-		<key>localhost</key>
-		<true/>
+		<key>piyorin.xyz</key>
+		<false/>
 	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
