--- a/.gitignore
+++ b/.gitignore
@@ -70,5 +70,5 @@ fastlane/test_output
 # Ignore tmp image file
 spotter/Assets.xcassets/tmp
 
-spotter.xcodeproj/xcshareddata/
+spotter.xcodeproj/xcuserdata/
 
